{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 225,
  "lineage": "79792ac8-7492-ef32-4a5a-21e8f1fa1016",
  "resources": [
    {
      "module": "module.initial",
      "mode": "data",
      "type": "aws_security_group",
      "name": "general_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-01faaf6a5af7a351e",
            "description": "Access to project generated by aws_access module",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tf-PartyPic-4e9af-sg"
                ]
              }
            ],
            "id": "sg-01faaf6a5af7a351e",
            "name": "tf-PartyPic-4e9af-sg",
            "region": "us-east-1",
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-sg",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": {
              "read": "40m"
            },
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "data",
      "type": "aws_lb",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0460b9d8fd8f69d9d",
            "arn": "arn:aws:ec2:us-east-1:473900222434:elastic-ip/eipalloc-0460b9d8fd8f69d9d",
            "associate_with_private_ip": "10.0.127.254",
            "domain": "vpc",
            "id": "eipalloc-0460b9d8fd8f69d9d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-144-121-21.compute-1.amazonaws.com",
            "public_ip": "54.144.121.21",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "tf-PartyPic-4e9af-subnet"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-subnet",
              "Owner": "terraform-ci@suse.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:loadbalancer/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262",
            "arn_suffix": "net/tf-PartyPic-4e9af-lb/58bb3895d56ee262",
            "dns_name": "tf-PartyPic-4e9af-lb-58bb3895d56ee262.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:473900222434:loadbalancer/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "tf-PartyPic-4e9af-lb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "security_groups": [
              "sg-01faaf6a5af7a351e",
              "sg-0db9112c07fe42ba1"
            ],
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0460b9d8fd8f69d9d",
                "subnet_id": "subnet-04fd83fd8ff2454c8"
              }
            ],
            "subnets": [
              "subnet-04fd83fd8ff2454c8"
            ],
            "tags": {
              "Name": "tf-PartyPic-4e9af-lb"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-lb",
              "Owner": "terraform-ci@suse.com"
            },
            "vpc_id": "vpc-04df185e2a8d5c98c",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:loadbalancer/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kubectl",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:listener/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262/1721422c7509ba74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:473900222434:listener/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262/1721422c7509ba74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:loadbalancer/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:listener/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262/1721422c7509ba74"
          },
          "dependencies": [
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kubectl",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "arn_suffix": "targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-partypic-4e9af-kubectl",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "tf-partypic-4e9af-kubectl"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-partypic-4e9af-kubectl",
              "Owner": "terraform-ci@suse.com"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94"
          },
          "dependencies": [
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-0db9112c07fe42ba1",
            "description": "Security group for load balancer tf-PartyPic-4e9af-lb",
            "egress": [],
            "id": "sg-0db9112c07fe42ba1",
            "ingress": [],
            "name": "tf-PartyPic-4e9af-lb",
            "name_prefix": "",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-PartyPic-4e9af-lb"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-lb",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sg-0db9112c07fe42ba1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "external_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kubectl-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-0334f94a322d4ac34",
            "cidr_ipv4": "45.155.141.214/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0334f94a322d4ac34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0db9112c07fe42ba1",
            "security_group_rule_id": "sgr-0334f94a322d4ac34",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-0334f94a322d4ac34",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.network_load_balancer[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_ingress_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-021f64910d5d8ed6f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-021f64910d5d8ed6f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01faaf6a5af7a351e",
            "region": "us-east-1",
            "security_group_id": "sg-0db9112c07fe42ba1",
            "security_group_rule_id": "sgr-021f64910d5d8ed6f",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-021f64910d5d8ed6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-01faaf6a5af7a351e",
            "description": "Access to project generated by aws_access module",
            "egress": [],
            "id": "sg-01faaf6a5af7a351e",
            "ingress": [],
            "name": "tf-PartyPic-4e9af-sg",
            "name_prefix": "",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-PartyPic-4e9af-sg"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-sg",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sg-01faaf6a5af7a351e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "external_egress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "external_egress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "project_egress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-0f4f6b09054561b20",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f4f6b09054561b20",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01faaf6a5af7a351e",
            "security_group_rule_id": "sgr-0f4f6b09054561b20",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-0f4f6b09054561b20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "project_egress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "external_ingress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "external_ingress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_ingress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-01585e6b73f8c6428",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01585e6b73f8c6428",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01faaf6a5af7a351e",
            "security_group_rule_id": "sgr-01585e6b73f8c6428",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-01585e6b73f8c6428",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.project_security_group[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_ingress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.subnet[\"0\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.project[0].module.subnet[\"0\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:subnet/subnet-04fd83fd8ff2454c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd83fd8ff2454c8",
            "ipv6_cidr_block": "2600:1f18:1ac:4e00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0af7f6ddcfc4ac5fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473900222434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tf-PartyPic-4e9af-subnet"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-subnet",
              "Owner": "terraform-ci@suse.com"
            },
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "subnet-04fd83fd8ff2454c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.initial.data.aws_availability_zones.available",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.vpc[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.project[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:internet-gateway/igw-034d0cf78e294dc35",
            "id": "igw-034d0cf78e294dc35",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.initial.module.project.module.vpc.aws_vpc.new"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034d0cf78e294dc35",
            "id": "r-rtb-0ccfdbe5e117225f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ccfdbe5e117225f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ccfdbe5e117225f0"
          },
          "dependencies": [
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_vpc.new"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.project[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.initial.module.project[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:vpc/vpc-04df185e2a8d5c98c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001bccc7960ef2490",
            "default_route_table_id": "rtb-0ccfdbe5e117225f0",
            "default_security_group_id": "sg-0af2bbbd86f715c09",
            "dhcp_options_id": "dopt-0a7e59cb7e5424140",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04df185e2a8d5c98c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01aa022b4d7c10cda",
            "ipv6_cidr_block": "2600:1f18:1ac:4e00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ccfdbe5e117225f0",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "tags": {
              "Name": "tf-PartyPic-4e9af-vpc"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-vpc",
              "Owner": "terraform-ci@suse.com"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "vpc-04df185e2a8d5c98c",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.direct_access[0]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-01faaf6a5af7a351e",
            "description": "Access to project generated by aws_access module",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tf-PartyPic-4e9af-sg"
                ]
              }
            ],
            "id": "sg-01faaf6a5af7a351e",
            "name": "tf-PartyPic-4e9af-sg",
            "region": "us-east-1",
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-sg",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.direct_access[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.server[0].module.direct_access[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "direct_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-0ca11c8f35695397a",
            "description": "Security group for server tf-PartyPic-4e9af-cc51b81",
            "egress": [],
            "id": "sg-0ca11c8f35695397a",
            "ingress": [],
            "name": "tf-PartyPic-4e9af-cc51b81-direct",
            "name_prefix": "",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-PartyPic-4e9af-cc51b81-direct"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-cc51b81-direct",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sg-0ca11c8f35695397a",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.indirect_access.aws_lb_target_group_attachment.server",
            "module.initial.module.server.module.indirect_access.data.aws_lb_target_group.general_info",
            "module.initial.module.server.module.server.aws_instance.created",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_availability_zone.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_select",
            "module.initial.module.server.module.server.data.aws_instance.selected",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_select",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_create",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_select",
            "module.initial.module.server.module.server.terraform_data.set_primary_ipv6"
          ]
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.direct_access[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_direct_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-0cab0c923da60bb21",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cab0c923da60bb21",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01faaf6a5af7a351e",
            "region": "us-east-1",
            "security_group_id": "sg-0ca11c8f35695397a",
            "security_group_rule_id": "sgr-0cab0c923da60bb21",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-0cab0c923da60bb21",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.direct_access.aws_security_group.direct_access",
            "module.initial.module.server.module.direct_access.data.aws_security_group.server_security_group",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.indirect_access.aws_lb_target_group_attachment.server",
            "module.initial.module.server.module.indirect_access.data.aws_lb_target_group.general_info",
            "module.initial.module.server.module.server.aws_instance.created",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_availability_zone.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_select",
            "module.initial.module.server.module.server.data.aws_instance.selected",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_select",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_create",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_select",
            "module.initial.module.server.module.server.terraform_data.set_primary_ipv6"
          ]
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.direct_access[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "runnerApi-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-068afbd1063efc1c4",
            "cidr_ipv4": "45.155.141.214/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-068afbd1063efc1c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ca11c8f35695397a",
            "security_group_rule_id": "sgr-068afbd1063efc1c4",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-068afbd1063efc1c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.direct_access.aws_security_group.direct_access",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.indirect_access.aws_lb_target_group_attachment.server",
            "module.initial.module.server.module.indirect_access.data.aws_lb_target_group.general_info",
            "module.initial.module.server.module.server.aws_instance.created",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_availability_zone.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_select",
            "module.initial.module.server.module.server.data.aws_instance.selected",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_select",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_create",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_select",
            "module.initial.module.server.module.server.terraform_data.set_primary_ipv6"
          ]
        },
        {
          "index_key": "runnerSsh-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group-rule/sgr-0ab4178026d1877bc",
            "cidr_ipv4": "45.155.141.214/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ab4178026d1877bc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ca11c8f35695397a",
            "security_group_rule_id": "sgr-0ab4178026d1877bc",
            "tags": null,
            "tags_all": {
              "Id": "PartyPic",
              "Owner": "terraform-ci@suse.com"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "sgr-0ab4178026d1877bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.direct_access.aws_security_group.direct_access",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.indirect_access.aws_lb_target_group_attachment.server",
            "module.initial.module.server.module.indirect_access.data.aws_lb_target_group.general_info",
            "module.initial.module.server.module.server.aws_instance.created",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_availability_zone.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_select",
            "module.initial.module.server.module.server.data.aws_instance.selected",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_select",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_create",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_select",
            "module.initial.module.server.module.server.terraform_data.set_primary_ipv6"
          ]
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.indirect_access[0]",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "general_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-partypic-4e9af-kubectl",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "arn_suffix": "targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:473900222434:loadbalancer/net/tf-PartyPic-4e9af-lb/58bb3895d56ee262"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-partypic-4e9af-kubectl",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-partypic-4e9af-kubectl",
              "Owner": "terraform-ci@suse.com"
            },
            "target_control_port": 0,
            "target_type": "instance",
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.indirect_access[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-partypic-4e9af-kubectl",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94-20251215085957692500000002",
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:473900222434:targetgroup/tf-partypic-4e9af-kubectl/6535f2f56273ae94",
            "target_id": "i-05e8f207595c14e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.indirect_access.data.aws_lb_target_group.general_info",
            "module.initial.module.server.module.server.aws_instance.created",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_availability_zone.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_select",
            "module.initial.module.server.module.server.data.aws_instance.selected",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_select",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_create",
            "module.initial.module.server.module.server.data.aws_vpc.general_info_select",
            "module.initial.module.server.module.server.terraform_data.set_primary_ipv6"
          ]
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_instance",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "general_info_create",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:security-group/sg-01faaf6a5af7a351e",
            "description": "Access to project generated by aws_access module",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tf-PartyPic-4e9af-sg"
                ]
              }
            ],
            "id": "sg-01faaf6a5af7a351e",
            "name": "tf-PartyPic-4e9af-sg",
            "region": "us-east-1",
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-sg",
              "Owner": "terraform-ci@suse.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "general_info_create",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:subnet/subnet-04fd83fd8ff2454c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 32762,
            "cidr_block": "10.0.0.0/17",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tf-PartyPic-4e9af-subnet"
                ]
              }
            ],
            "id": "subnet-04fd83fd8ff2454c8",
            "ipv6_cidr_block": "2600:1f18:1ac:4e00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0af7f6ddcfc4ac5fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473900222434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-subnet",
              "Owner": "terraform-ci@suse.com"
            },
            "vpc_id": "vpc-04df185e2a8d5c98c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "general_info_select",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "general_info_create",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473900222434:vpc/vpc-04df185e2a8d5c98c",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fd88f7554db30ff1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a7e59cb7e5424140",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04df185e2a8d5c98c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01aa022b4d7c10cda",
            "ipv6_cidr_block": "2600:1f18:1ac:4e00::/56",
            "main_route_table_id": "rtb-0ccfdbe5e117225f0",
            "owner_id": "473900222434",
            "region": "us-east-1",
            "tags": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-vpc",
              "Owner": "terraform-ci@suse.com"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "general_info_select",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.initial.module.server[0].module.server[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02cae6349c5c72f85",
            "arn": "arn:aws:ec2:us-east-1:473900222434:instance/i-05e8f207595c14e42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e8f207595c14e42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f9b179a1d96cf32e"
              }
            ],
            "primary_network_interface_id": "eni-0f9b179a1d96cf32e",
            "private_dns": "ip-10-0-4-240.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.240",
            "public_ip": "98.81.119.127",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "tf-PartyPic-4e9af-cc51b81"
                },
                "tags_all": {
                  "Id": "PartyPic",
                  "Name": "tf-PartyPic-4e9af-cc51b81",
                  "Owner": "terraform-ci@suse.com"
                },
                "throughput": 125,
                "volume_id": "vol-051093e506ee41532",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01faaf6a5af7a351e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fd83fd8ff2454c8",
            "tags": {
              "Name": "tf-PartyPic-4e9af-cc51b81"
            },
            "tags_all": {
              "Id": "PartyPic",
              "Name": "tf-PartyPic-4e9af-cc51b81",
              "Owner": "terraform-ci@suse.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01faaf6a5af7a351e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "473900222434",
            "id": "i-05e8f207595c14e42",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.myip",
            "module.initial.data.aws_availability_zones.available",
            "module.initial.data.aws_security_group.general_info",
            "module.initial.module.project.data.aws_availability_zones.available",
            "module.initial.module.project.module.domain.acme_certificate.new",
            "module.initial.module.project.module.domain.acme_registration.reg",
            "module.initial.module.project.module.domain.aws_iam_server_certificate.new",
            "module.initial.module.project.module.domain.aws_route53_record.ipv4",
            "module.initial.module.project.module.domain.aws_route53_record.ipv6",
            "module.initial.module.project.module.domain.aws_route53domains_registered_domain.select",
            "module.initial.module.project.module.domain.data.aws_iam_server_certificate.select",
            "module.initial.module.project.module.domain.data.aws_route53_zone.select",
            "module.initial.module.project.module.domain.tls_cert_request.req",
            "module.initial.module.project.module.domain.tls_private_key.cert_private_key",
            "module.initial.module.project.module.domain.tls_private_key.private_key",
            "module.initial.module.project.module.network_load_balancer.aws_eip.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb.new",
            "module.initial.module.project.module.network_load_balancer.aws_lb_listener.created",
            "module.initial.module.project.module.network_load_balancer.aws_lb_target_group.created",
            "module.initial.module.project.module.network_load_balancer.aws_security_group.load_balancer",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.external_ingress",
            "module.initial.module.project.module.network_load_balancer.aws_vpc_security_group_ingress_rule.project_ingress_loadbalancer",
            "module.initial.module.project.module.network_load_balancer.data.aws_lb.selected",
            "module.initial.module.project.module.project_security_group.aws_security_group.new",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.external_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_egress_rule.project_egress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.external_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv4",
            "module.initial.module.project.module.project_security_group.aws_vpc_security_group_ingress_rule.project_ingress_ipv6",
            "module.initial.module.project.module.project_security_group.data.aws_security_group.selected",
            "module.initial.module.project.module.subnet.aws_subnet.created",
            "module.initial.module.project.module.subnet.data.aws_subnet.selected",
            "module.initial.module.project.module.vpc.aws_internet_gateway.new",
            "module.initial.module.project.module.vpc.aws_route.public_ipv4",
            "module.initial.module.project.module.vpc.aws_route.public_ipv6",
            "module.initial.module.project.module.vpc.aws_vpc.new",
            "module.initial.module.project.module.vpc.data.aws_vpc.selected",
            "module.initial.module.server.data.cloudinit_config.setup",
            "module.initial.module.server.module.image.data.aws_ami.search",
            "module.initial.module.server.module.image.data.aws_ami.select",
            "module.initial.module.server.module.server.aws_key_pair.created",
            "module.initial.module.server.module.server.data.aws_ec2_instance_type.general_info_create",
            "module.initial.module.server.module.server.data.aws_key_pair.ssh_key_selected",
            "module.initial.module.server.module.server.data.aws_security_group.general_info_create",
            "module.initial.module.server.module.server.data.aws_subnet.general_info_create"
          ]
        }
      ]
    }
  ]
}